@@ -1,3 +1,10 @@
+Summary of important user-visible changes for statistics 1.2.4:
+-------------------------------------------------------------------
+
+ ** The following functions are new:
+ 
+    cmdscale
+
 Summary of important user-visible changes for statistics 1.2.3:
 -------------------------------------------------------------------
 
